// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Serverless SNS SQS Lambda when all parameters are provided should produce valid SQS CF template items 1`] = `
Object {
  "Resources": Object {
    "some nameDeadLetterQueue": Object {
      "Properties": Object {
        "KmsDataKeyReusePeriodSeconds": 200,
        "KmsMasterKeyId": "some key",
        "QueueName": "some prefixsome nameDeadLetterQueue",
      },
      "Type": "AWS::SQS::Queue",
    },
    "some nameQueue": Object {
      "Properties": Object {
        "KmsDataKeyReusePeriodSeconds": 200,
        "KmsMasterKeyId": "some key",
        "QueueName": "some prefixsome nameQueue",
        "RedrivePolicy": Object {
          "deadLetterTargetArn": Object {
            "Fn::GetAtt": Array [
              "some nameDeadLetterQueue",
              "Arn",
            ],
          },
          "maxReceiveCount": 4,
        },
        "VisibilityTimeout": 999,
      },
      "Type": "AWS::SQS::Queue",
    },
  },
}
`;

exports[`Test Serverless SNS SQS Lambda when encryption parameters are not provided should produce valid SQS CF template items 1`] = `
Object {
  "Resources": Object {
    "some nameDeadLetterQueue": Object {
      "Properties": Object {
        "QueueName": "some prefixsome nameDeadLetterQueue",
      },
      "Type": "AWS::SQS::Queue",
    },
    "some nameQueue": Object {
      "Properties": Object {
        "QueueName": "some prefixsome nameQueue",
        "RedrivePolicy": Object {
          "deadLetterTargetArn": Object {
            "Fn::GetAtt": Array [
              "some nameDeadLetterQueue",
              "Arn",
            ],
          },
          "maxReceiveCount": 4,
        },
      },
      "Type": "AWS::SQS::Queue",
    },
  },
}
`;

exports[`Test Serverless SNS SQS Lambda when no optional parameters are provided should produce valid SQS CF template items 1`] = `
Object {
  "Resources": Object {
    "some nameDeadLetterQueue": Object {
      "Properties": Object {
        "QueueName": "undefinedsome nameDeadLetterQueue",
      },
      "Type": "AWS::SQS::Queue",
    },
    "some nameQueue": Object {
      "Properties": Object {
        "QueueName": "undefinedsome nameQueue",
        "RedrivePolicy": Object {
          "deadLetterTargetArn": Object {
            "Fn::GetAtt": Array [
              "some nameDeadLetterQueue",
              "Arn",
            ],
          },
          "maxReceiveCount": undefined,
        },
      },
      "Type": "AWS::SQS::Queue",
    },
  },
}
`;
